# lab.abilian.com

./: .gitignore  .markdownlint.yml  Makefile  config.toml  daily.py  mkdocs.yml  nginx.conf  pyproject.toml  sync.py  tasks.py
docs/: changelog.md  index.md
docs/Business/: 00 Business.md  OKRs.md  Outcome over output.md  Sales.md  Values.md
docs/Business/Authors/: 00 Authors.md  Alexander Osterwalder.md  Andy Grove.md  Donella Meadows.md  Geoffrey Moore.md  W. Edwards Deming.md
docs/Business/Authors & Leaders/: 00 Authors.md  Alexander Osterwalder.md  Andy Grove.md  Donella Meadows.md  Geoffrey Moore.md  Kazuo Inamori.md  Peter Drucker.md  Robert I. Sutton.md  W. Edwards Deming.md
docs/Business/Business Models/: Business Model Canvas.md  Economic studies on OSS.md  OSS Business Models.md  The Business Model Canvas.md  The RCOV Model.md  The Software Business Model Framework (SBMF).md  The e3-value model.md
docs/Business/Customer Relationship Management/: Rethinking Lead Qualification - A Strategic Approach to CRM.md
docs/Business/HR/: Engineering Roles in a Tech Company.md
docs/Business/Knowledge Management/: Concept Maps.md  File Management.md  Is knowledge management dead (or dying)?.md  KM at SMEs.md  Linking Your Thinking.md  Mind Mapping.md  Personal Knowledge Management (PKM).md  The Science of PKM.md
docs/Business/Legal/: Public Benefit Companies.md
docs/Business/Management Competencies/: Accountability.md  Action Orientation.md  Ambiguity.md  Attracting and Retaining Talent.md  Business Insight.md
docs/Business/Marketing/: Copywriting.md  MVB - Minimal Viable Branding.md  Marketing Trends for 2025.md  Product-led growth.md  SaaS conversion strategy.md  UGC.md  Web Design - Home Page.md
docs/Business/Meetings/: Weekly Meetings.md
docs/Business/Practices/: Coaching.md  Incentives.md  (+4 more)
docs/Projects/: 00 Projects.md  00MOC.md  00Projects.md  Abilian SBE.md  Hop3.md  Wendelin (2014-2019).md  flake8-ecocode.md
docs/Tech/: 00 Technology.md  Configuration languages.md  Ecodesign.md  Macro expanders.md  Optimization.md  Typst.md  VPN.md
frozen/cython+/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
pages/: index.md
src/lab/: changelog.py  cli.py  keywords.py  keywords2.py  plugin.py  sync.py
theme/: main.html
theme/partials/: __header.html  footer.html  header.html  logo.html
(+564 files in other folders)
