[project]
name = "lab.abilian.com"
version = "0.1.0"
requires-python = ">=3.10"
description = ""
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" },
]
readme = "README.md"

dependencies = [
    "mkdocs ~= 1.4.2",
    "mkdocs-material ~= 9.1.7",
    "mkdocs-material-extensions ~= 1.1.1",
    "mkdocs-roamlinks-plugin ~= 0.2.0",
    "mkdocs-newsletter ~= 1.0.1",
    "arrow ~= 1.2.3",
    "snoop ~= 0.6",
    "attrs~=24.0",
    "devtools~=0.12",
    # NLP
    # "nltk ~= 3.8.1",
    # "keybert>=0.8.5",
    # "sentence-transformers>=3.3.0",
    "invoke>=2.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[tool.uv]
package = true

[project.scripts]
lab = "lab.cli:main"

[project.entry-points."mkdocs.plugins"]
lab = "lab.plugin:MyPlugin"
